unpackaged/main/default/objects/LiveChatTranscript/fields/ebotdata__Invocation_URL__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Invocation_URL__c</fullName>
    <inlineHelpText>Filled via Pre-chat form in snapin file</inlineHelpText>
    <label>Invocation URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>