unpackaged/main/default/objects/LiveChatTranscript/fields/ebotdata__Pre_Bot_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Pre_Bot_Deployment_Date__c</fullName>
    <formula>ebotdata__Bot_Deployment_Date__c - 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pre-Bot Deployment Date</label>
    <type>Date</type>
</CustomField>