unpackaged/main/default/objects/LiveChatTranscript/fields/Integration_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error_Message__c</fullName>
    <description>Error message related to integration with Calabrio</description>
    <label>Integration Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>