unpackaged/main/default/objects/LiveChatTranscript/listViews/Calvin_Klein_Chat_Priority_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Calvin_Klein_Chat_Priority_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Calvin Klein Chat Priority</label>
    <queue>Calvin_Klein_Chat_Priority</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>