unpackaged/main/default/objects/LiveChatTranscript/listViews/Digital_Assistant_Queue_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Digital_Assistant_Queue_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Digital Assistant Queue</label>
    <queue>Digital_Assistant_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>