unpackaged/main/default/objects/LiveChatTranscript/listViews/ebotdata__With_Details.listView-meta.xml
<ListView>
    <fullName>ebotdata__With_Details</fullName>
    <columns>Name</columns>
    <columns>Case</columns>
    <columns>StartTime</columns>
    <columns>EndTime</columns>
    <columns>Status</columns>
    <columns>Contact</columns>
    <columns>Brand__c</columns>
    <columns>URL__c</columns>
    <columns>ReferrerUri</columns>
    <filterScope>Everything</filterScope>
    <label>With Details</label>
</ListView>