unpackaged/main/default/objects/LiveChatTranscript/listViews/Partner_Brands_Chat_Priority_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Partner_Brands_Chat_Priority_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Partner Brands Chat Priority</label>
    <queue>Partner_Brands_Chat_Priority</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>