unpackaged/main/default/objects/LiveChatTranscript/listViews/Speedo_Chat_Priority_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Speedo_Chat_Priority_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Speedo Chat Priority</label>
    <queue>Speedo_Chat_Priority</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>