unpackaged/main/default/objects/LiveChatTranscript/listViews/Tommy_Chat_Priority_LiveChatTranscript.listView-meta.xml
<ListView>
    <fullName>Tommy_Chat_Priority_LiveChatTranscript</fullName>
    <filterScope>Queue</filterScope>
    <label>Tommy Chat Priority</label>
    <queue>Tommy_Chat_Priority</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>